Fix Java 16 compatibility issue